--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -98,6 +98,7 @@
                 y = y.document;
             y.getElementById('txtDiary').style.color = getRandomColor();
         }
+        // renxi/functions.js
         function previous() {
             here--;
             var iframe = document.getElementById('diary');            
