--- a/kt/mylove/diary/2.html
+++ b/kt/mylove/diary/2.html
@@ -1,13 +1,16 @@
 <p id="txtDiary">
     <span class="say">Em này, </span><br>
     <span class="say"> </span><br>
-    <span class="say">😊 Em là người con gái anh yêu !! </span><br>
-    <span class="say">Không phải chỉ bởi.. </span><br>
-    <span class="say">Em xinh đẹp đến nỗi anh như bị sét tình đánh, </span><br>
-    <span class="say">Hay những biểu cảm đáng yêu kia, </span><br>
-    <span class="say">..em dành cho anh !! </span><br>
+    <span class="say">😊 Đời xô bồ quá em ha </span><br>
+    <span class="say">Cơ mà anh lại vốn tốt tính.. </span><br>
+    <span class="say">Cứ thấy em than thì anh bảo em thở, </span><br>
+    <span class="say">Cứ thấy em buồn thì anh bảo em chán, </span><br>
+    <span class="say">Lại thấy e cay thì anh bảo em đắng, </span><br>
     <span class="say"> </span><br>
-    <span class="say">Em là một điều kỳ lạ nhất từng xuất hiện trong anh </span><br>
+    <span class="say">👵👴 Thời ấy qua rồi e nhỉ ?? </span><br>
+    <span class="say"> </span><br>
+    <span class="say">Vẫn là thế.. </span><br>
+    <span class="say">Em vẫn là điều kỳ lạ nhất từng xuất hiện trong anh </span><br>
     <span class="say">Vậy hãy cứ tin em nhé.. </span><br>
     <span class="say">"Rồi đây e cũng sẽ phải về ở đợ nhà anh" </span><br>
     <span class="say"> </span><br>
