--- a/kt/mylove/diary/3.html
+++ b/kt/mylove/diary/3.html
@@ -1,22 +1,22 @@
 <p id="txtDiary">
+    <span class="say">Em này !! </span><br>
     <span class="say"> </span><br>
+    <span class="say">Hôm nay em hỏi anh: </span><br>
+    <span class="say">Tuần sau có ngày gì ?? </span><br>
     <span class="say"> </span><br>
+    <span class="say">Anh nhìn em mà đáp: Cúng cô hồn hả em !?! </span><br>
+    <span class="say">🤗🤗 </span><br>
     <span class="say"> </span><br>
+    <span class="say">Anh biết em thay đổi </span><br>
+    <span class="say">Tuổi 22 sang tuổi mới</span><br>
     <span class="say"> </span><br>
+    <span class="say">Không chỉ vậy... </span><br>
+    <span class="say">A còn một điều khác:</span><br>
+    <span class="say">Rằng một người yêu tốt, </span><br>
+    <span class="say">Sẽ không muốn thay đổi bất cứ gì ở bạn </span><br>
+    <span class="say">Trừ tình trạng hôn nhân 😋😋😋 </span><br>
     <span class="say"> </span><br>
-    <span class="say"> </span><br>
-    <span class="say"> </span><br>
-    <span class="say"> </span><br>
-    <span class="say"> </span><br>
-    <span class="say"> </span><br>
-    <span class="say"> </span><br>
-    <span class="say"> </span><br>
-    <span class="say"> </span><br>
-    <span class="say"> </span><br>
-    <span class="say"> </span><br>
-    <span class="say"> </span><br>
-    <span class="say"> </span><br>
-    <span class="say"> </span><br>
+    <span class="say">Em biết đấy !! </span><br>
     <span class="say"> </span><br>
     <span class="say"><span class="space"></span>-- Yêu em thật nhiều.. moazzz :*</span>
 </p>
