--- a/kt/mylove/diary/3.html
+++ b/kt/mylove/diary/3.html
@@ -18,5 +18,5 @@
     <span class="say"> </span><br>
     <span class="say">Em biết đấy !! </span><br>
     <span class="say"> </span><br>
-    <span class="say"><span class="space"></span>-- Yêu em thật nhiều.. moazzz :*</span>
+    <span class="say"><span class="space"></span>-- Yêu em thật nhiều.. moazzz😘 </span>
 </p>
