--- a/kt/mylove/diary/3.html
+++ b/kt/mylove/diary/3.html
@@ -11,7 +11,7 @@
     <span class="say">Tuổi 22 sang tuổi mới</span><br>
     <span class="say"> </span><br>
     <span class="say">Không chỉ vậy... </span><br>
-    <span class="say">A còn một điều khác:</span><br>
+    <span class="say">A còn biết một điều khác:</span><br>
     <span class="say">Rằng một người yêu tốt, </span><br>
     <span class="say">Sẽ không muốn thay đổi bất cứ gì ở bạn </span><br>
     <span class="say">Trừ tình trạng hôn nhân 😋😋😋 </span><br>
