--- a/kt/mylove/diary/7.html
+++ b/kt/mylove/diary/7.html
@@ -6,6 +6,7 @@
     <span class="say">Rồi cũng sẽ làm đâu. </span><br>
     <span class="say">Nhưng anh thì khác  </span><br>
     <span class="say">😍😍😍 </span><br>
+    <span class="say"> </span><br>
     <span class="say">Càng xa em anh càng nhớ em da diết, </span><br>
     <span class="say">Càng gần em anh càng yêu em mãnh liệt </span><br>
     <span class="say">Cứ như thế thì.. </span><br>
@@ -13,7 +14,7 @@
     <span class="say"> </span><br>
     <span class="say">Bởi vì mặt trời chỉ có một </span><br>
     <span class="say">Bởi vì mặt trăng chỉ có một </span><br>
-    <span class="say">Tính trong hệ mặt trời thôi nhé </span><br>
+    <span class="say">Và em biết không ?? </span><br>
     <span class="say">Em cũng chỉ có một.. Tình yêu của anh !! </span><br>
     <span class="say">❤️❤️❤️ </span><br>
     <span class="say"> </span><br>
