--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -21,7 +21,7 @@
     <meta http-equiv=”Expires” content=”-1″>
     <meta http-equiv=”CACHE-CONTROL” content=”NO-CACHE”>
 </head>
-<body onLoad="window.scrollTo(0, document.body.scrollHeight)" style="background-size: 300px 300px; background-image: url('https://acoolzero.github.io/website/kt/mylove/image/birthday.png')">
+<body onLoad="window.scrollTo(0, document.body.scrollHeight)" >
     <div id="main">
         <div id="error">
             Trình duyệt của bạn không được hỗ trợ. Bạn nên sử dụng (<a href="http://www.google.com/chrome">Chrome</a>) và (<a href="http://firefox.com/download/">Firefox</a>)
@@ -38,7 +38,7 @@
                     <button id="previous" onclick="previous();" style="display: inline-block; float: left;">Trước</button>
                     <button id="next" onclick="next();" style="display: inline-block; float: right;">Sau</button>
                 </div><br>
-                <div id="code">
+                <div id="code" style="background-size: 300px 300px; background-repeat: no-repeat; background-image: url('https://acoolzero.github.io/website/kt/mylove/image/birthday.png');">
                     <p>This is placeholder</p>
                 </div>
             </div>
