--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -38,10 +38,12 @@
                     <button id="previous" onclick="previous();" style="display: inline-block; float: left;">Trước</button>
                     <button id="next" onclick="next();" style="display: inline-block; float: right;">Sau</button>
                 </div><br>
-                <div id="code" style="background-size: 300px 300px; background-repeat: no-repeat; background-image: url('https://acoolzero.github.io/website/kt/mylove/image/birthday.png');">
+                <div id="code">
                     <p>This is placeholder</p>
                 </div>
             </div>
+            <img width="300px" height="300px" style="float: left;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
+            <img width="300px" height="300px" style="float: right;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
             <div id="clock-box">
                 <span class="STYLE1"></span><font color="#FF0000">* Anh Yêu Em *</font>
                 <span class="STYLE1"> Khoảng thời gian bên nhau...</span>
