--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -42,14 +42,15 @@
                     <p>This is placeholder</p>
                 </div>
             </div>
-            <img width="300px" height="300px" style="float: left;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
-            <img width="300px" height="300px" style="float: right;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
             <div id="clock-box">
                 <span class="STYLE1"></span><font color="#FF0000">* Anh Yêu Em *</font>
                 <span class="STYLE1"> Khoảng thời gian bên nhau...</span>
                 <div id="clock"></div>
             </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
+            
+            <img width="300px" height="300px" style="float: left; position: sticky;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
+            <img width="300px" height="300px" style="float: right; position: sticky;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
         </div>
     </div>
     <script>
