--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -49,8 +49,8 @@
             </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
             
-            <img width="300px" height="300px" style="float: left; position: sticky;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
-            <img width="300px" height="300px" style="float: right; position: sticky;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
+            <img width="300px" height="300px" style="float: left; position: sticky; bottom: 0;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
+            <img width="300px" height="300px" style="float: right; position: sticky; bottom: 0;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
         </div>
     </div>
     <script>
