--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -26,15 +26,15 @@
         <div id="error">
             Trình duyệt của bạn không được hỗ trợ. Bạn nên sử dụng (<a href="http://www.google.com/chrome">Chrome</a>) và (<a href="http://firefox.com/download/">Firefox</a>)
         </div>
-        <div  style="z-index: 500; position: sticky; top: 0px; padding-left:5%; padding-right:5%">
+        <div style="z-index: 500; position: sticky; top: 0px; padding-left:5%; padding-right:5%">
             <div id="playlist"></div>
             <img height="32px" id="showyt" onclick="showyt();" style="display: none; float: right;" src="https://vignette.wikia.nocookie.net/logopedia/images/9/97/Youtube_kids_app_icon.png/revision/latest/scale-to-width-down/480?cb=20150305173154"/>
             <font id="txtVideo" class="STYLE1" style="display: none; float: right; padding-right: 5px;">Xem video thì ấn vào </font>
         </div>
-        
-        <img width="300px" height="300px" style="float: left; position: sticky; bottom: 0;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
-        <img width="300px" height="300px" style="float: right; position: sticky; bottom: 0;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
-        
+        <div style="position: sticky; bottom: 0;">
+        <img width="300px" height="300px" style="float: left;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
+        <img width="300px" height="300px" style="float: right;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
+        </div>
         <div style="padding:10px;"></div>
         <div id="wrap">
             <div id="text">
