--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -31,7 +31,7 @@
             <img height="32px" id="showyt" onclick="showyt();" style="display: none; float: right;" src="https://vignette.wikia.nocookie.net/logopedia/images/9/97/Youtube_kids_app_icon.png/revision/latest/scale-to-width-down/480?cb=20150305173154"/>
             <font id="txtVideo" class="STYLE1" style="display: none; float: right; padding-right: 5px;">Xem video thì ấn vào </font>
         </div>
-        <div style="position: sticky; bottom: 0;">
+        <div style="position: sticky; bottom: 0px;">
         <img width="300px" height="300px" style="float: left;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
         <img width="300px" height="300px" style="float: right;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
         </div>
