--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -49,7 +49,7 @@
             </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
         </div>
-        <div style="position: sticky; bottom: 0px;">
+        <div style="position: absolute; bottom: 0px;">
         <img width="300px" height="300px" style="float: left;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
         <img width="300px" height="300px" style="float: right;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
         </div>
