--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -51,7 +51,7 @@
         </div>
         <div>
         <img width="300px" height="300px" style="float: left; position: absolute; bottom: 0px;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
-        <img width="300px" height="300px" style="float: right; position: absolute; bottom: 0px;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
+        <img width="300px" height="300px" style="float: right; position: absolute; bottom: 0px; right: 0px;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
         </div>
     </div>
     <script>
