--- a/kt/mylove/diary/7.html
+++ b/kt/mylove/diary/7.html
@@ -14,8 +14,9 @@
     <span class="say"> </span><br>
     <span class="say">Bởi vì mặt trời chỉ có một </span><br>
     <span class="say">Bởi vì mặt trăng chỉ có một </span><br>
-    <span class="say">Và em biết không ?? </span><br>
-    <span class="say">Em cũng chỉ có một.. Tình yêu của anh !! </span><br>
+    <span class="say">Và trong cuộc đời này, em biết không ?? </span><br>
+    <span class="say">Em cũng chỉ có một.. </span><br>
+    <span class="say">Tình yêu của anh !! </span><br>
     <span class="say">❤️❤️❤️ </span><br>
     <span class="say"> </span><br>
     <span class="say"><span class="space"></span>-- Yêu em thật nhiều.. moazzz😘 </span>
