--- a/kt/mylove/diary/8.html
+++ b/kt/mylove/diary/8.html
@@ -6,8 +6,7 @@
     <span class="say"> </span><br>
     <span class="say">Nhiều người sau khi chia một thời gian</span><br>
     <span class="say">Sẽ nhìn lại quá khứ với những giọt nước mắt </span><br>
-    <span class="say">Nhưng đôi ta.. </span><br>
-    <span class="say">Khi chúng ta nằm và cùng nhau nhìn lại quá khứ </span><br>
+    <span class="say">Nhưng khi chúng ta nằm và cùng nhau nhìn lại quá khứ </span><br>
     <span class="say">Anh muốn thấy trên gương mặt em xinh đẹp </span><br>
     <span class="say">..một thoáng buồn nhẹ.. </span><br>
     <span class="say">..cho những ngày sóng gió.. </span><br>
