--- a/kt/mylove/diary/8.html
+++ b/kt/mylove/diary/8.html
@@ -2,7 +2,7 @@
     <span class="say">Em yêu này !! </span><br>
     <span class="say"> </span><br>
     <span class="say">Anh không đoán được lần thứ bao nhiêu em đọc nhật ký này </span><br>
-    <span class="say">Anh cũng không đoán được hiện em đang vui hay buồn, hay giận </span><br>
+    <span class="say">Anh cũng sẽ không đoán được hiện em đang vui hay buồn, hay giận </span><br>
     <span class="say"> </span><br>
     <span class="say">Nhiều người sau khi chia một thời gian</span><br>
     <span class="say">Sẽ nhìn lại quá khứ với những giọt nước mắt </span><br>
