--- a/kt/mylove/diary/8.html
+++ b/kt/mylove/diary/8.html
@@ -6,12 +6,12 @@
     <span class="say"> </span><br>
     <span class="say">Nhiều người sau khi chia một thời gian</span><br>
     <span class="say">Sẽ nhìn lại quá khứ với những giọt nước mắt </span><br>
-    <span class="say">Nhưng khi chúng ta nằm và cùng nhau nhìn lại quá khứ </span><br>
+    <span class="say">Nhưng khi chúng ta nằm cùng nhau nhìn lại quá khứ </span><br>
     <span class="say">Anh muốn thấy trên gương mặt em xinh đẹp </span><br>
     <span class="say">..một thoáng buồn nhẹ.. </span><br>
     <span class="say">..cho những ngày sóng gió.. </span><br>
     <span class="say">Và theo sau, là một nụ cười mãn nguyện </span><br>
-    <span class="say">Để gương mặt biến em thành một thiên thần, </span><br>
+    <span class="say">Để gương mặt biến em thành một thiên thần nhỏ, </span><br>
     <span class="say">Anh thương anh ngắm. </span><br>
     <span class="say">Mình cùng ngắm bình minh, và đi tiếp.. </span><br>
     <span class="say">Trên con xe mới độ của anh </span><br>
