--- a/kt/index.html
+++ b/kt/index.html
@@ -7,7 +7,9 @@
 
 <body>
 <script type="text/javascript">
-   var camxuc = getCookie('camxuc');
+   var camxuc = "";
+   if (document.cookie)
+      getCookie('camxuc');
    camxuc = prompt('Hôm qua bạn '.camxuc.'. Vậy cảm xúc của bạn hôm nay thế nào ??','thấy yêu thương');
    document.cookie = "camxuc=".camxuc;
    alert('Để tôi đưa bạn vào nơi ấy nhé !');
