--- a/kt/index.html
+++ b/kt/index.html
@@ -10,8 +10,8 @@
    var camxuc = "";
    if (document.cookie)
       getCookie('camxuc');
-   camxuc = prompt('Hôm qua bạn '.camxuc.'. Vậy cảm xúc của bạn hôm nay thế nào ??','thấy yêu thương');
-   document.cookie = "camxuc=".camxuc;
+   camxuc = prompt('Hôm qua bạn '+camxuc+'. Vậy cảm xúc của bạn hôm nay thế nào ??','thấy yêu thương');
+   document.cookie = "camxuc="+camxuc;
    alert('Để tôi đưa bạn vào nơi ấy nhé !');
    
    top.location.href="mylove";
