--- a/kt/index.html
+++ b/kt/index.html
@@ -10,7 +10,7 @@
    var camxuc = "";
    if (document.cookie)
       getCookie('camxuc');
-   camxuc = prompt('Hôm qua bạn '+camxuc+'. Vậy cảm xúc của bạn hôm nay thế nào ??','thấy yêu thương');
+   camxuc = prompt('Hôm qua bạn '+camxuc+'. Vậy cảm xúc của bạn hôm nay thế nào ??','cảm nhận được yêu thương');
    document.cookie = "camxuc="+camxuc;
    alert('Để tôi đưa bạn vào nơi ấy nhé !');
    
