--- a/kt/mylove/diary/10.html
+++ b/kt/mylove/diary/10.html
@@ -15,9 +15,11 @@
     <span class="say">Và chúc e </span><br>
     <span class="say">Có những khoảng khắc hạnh phúc </span><br>
     <span class="say">Với sở thích, với những người thân yêu, </span><br>
-    <span class="say">và với a, người iu e nhất 😘😘 </span><br>
+    <span class="say">.. và với a, người iu e nhất 😘😘 </span><br>
+    <span class="say">Vì a cũng biết e đã dành rất nhiều tình cảm cho a </span><br>
+    <span class="say">A sẽ luôn vì e mà sẽ không vô tâm với e nữa </span><br>
     <span class="say"> </span><br>
-    <span class="say">Ngoài ra.. anh sẽ làm cho mặt mọng đáng iu của e trở lại.. cả cái mũi đó nữa.. anh cũng đã hứa sẽ đền mũi cho e mà.. hihi</span><br>
+    <span class="say">Vì yêu em là niềm đam mê của anh.. moazzz😘 </span>
     <span class="say"> </span><br>
-    <span class="say">Yêu em là niềm đam mê của anh.. moazzz😘 </span>
+    <span class="say">Chưa hết đâu còn nữa.. e nhấn về Trước đi </span><br>
 </p>
