--- a/kt/mylove/diary/9.html
+++ b/kt/mylove/diary/9.html
@@ -1,4 +1,4 @@
-<p id="txtDiary" style="text-size: 14px;">
+<p id="txtDiary" style="font-size: 14px;">
     <span class="say">Ngoài ra.. </span><br>
     <span class="say">anh sẽ làm cho mặt mọng đáng iu của e trở lại.. </span><br>
     <span class="say">cả cái mũi đó nữa.. </span><br>
