--- a/kt/mylove/diary/9.html
+++ b/kt/mylove/diary/9.html
@@ -1,24 +1,19 @@
 <p id="txtDiary" style="font-size: 14px;">
     <span class="say">Ngoài ra.. </span><br>
-    <span class="say">anh sẽ làm cho mặt mọng đáng iu của e trở lại.. </span><br>
-    <span class="say">cả cái mũi đó nữa.. </span><br>
-    <span class="say">anh cũng đã hứa sẽ đền mũi cho e mà.. </span><br>
-    <span class="say">Theo truyền thống các năm thì đây là lời chúc của anh nhé </span><br>
-    <span class="say">E hiện tại rất xinh,  mặt đẹp, dáng thon </span><br>
-    <span class="say">E lại cũng rất thông minh và nhạy cảm </span><br>
-    <span class="say">Dù tâm lý em thế nào, e cũng làm a xao xuyến, động lòng </span><br>
-    <span class="say">Em là thiên thần đáng iu của a 😍😍 </span><br>
+    <span class="say">Anh sẽ làm cho mặt mọng đáng iu của e trở lại.. </span><br>
+    <span class="say">Cả cái mũi đó nữa.. </span><br>
+    <span class="say">Anh cũng đã hứa sẽ đền mũi cho e mà.. </span><br>
     <span class="say"> </span><br>
-    <span class="say">Chúc em vẫn xinh đẹp rạng ngời như thế,  </span><br>
-    <span class="say">Thông minh như thế, </span><br>
-    <span class="say">Yêu đời hơn thế !! </span><br>
-    <span class="say">Để Kim Thùy của a lớn lên yêu kiều nhất trời đất </span><br>
+    <span class="say">Từ khi yêu e 😇 a đã có những cảm giác lạ thường </span><br>
+    <span class="say">Nhờ e, a thèm cảm giác sống vùng lạnh </span><br>
+    <span class="say">Nhờ e, a thấy cuộc sống gấp đôi màu sắc </span><br>
+    <span class="say">E vẫn sẽ là thiên thần nữ đáng iu 😍😍 </span><br>
+    <span class="say">A vẫn sẽ là thiên thần nam mạnh mẽ </span><br>
+    <span class="say">Và chúng ta đi với nhau đến trọn vòng thế giới.. </span><br>
     <span class="say"> </span><br>
-    <span class="say">Và chúc e </span><br>
-    <span class="say">Có những khoảng khắc hạnh phúc </span><br>
-    <span class="say">Với sở thích, với những người thân yêu, </span><br>
-    <span class="say">và với a, người iu e nhất 😘😘 </span><br>
+    <span class="say">Vậy e ơi 😋 </span><br>
+    <span class="say">Hãy vững tin e nhé </span><br>
+    <span class="say">"Rồi đây e cũng sẽ phải về ở đợ nhà a !!" </span><br>
     <span class="say"> </span><br>
-
-    <span class="say">Yêu em là niềm đam mê của anh.. moazzz😘 </span>
+    <span class="say" style="float:right;">Yêu em, niềm đam mê của anh.. moazzz😘 </span>
 </p>
