--- a/kt/mylove/diary/10.html
+++ b/kt/mylove/diary/10.html
@@ -1,4 +1,4 @@
-<p id="txtDiary" style="font-size: 14px;">
+<p id="txtDiary" style="color: rgb(238, 59, 96); font-size: 14px;">
     <span class="say">Em yêu này ❤️ </span><br>
     <span class="say"> </span><br>
     <span class="say">Theo truyền thống các năm thì đây là lời chúc của anh nhé </span><br>
@@ -15,7 +15,7 @@
     <span class="say">Và chúc e </span><br>
     <span class="say">Có những khoảng khắc hạnh phúc </span><br>
     <span class="say">Với sở thích, với những người thân yêu, </span><br>
-    <span class="say">.. và với a, người iu e nhất 😘😘 </span><br>
+    <span class="say">..và với a, người iu e nhất 😘😘 </span><br>
     <span class="say">Vì a cũng biết e đã dành rất nhiều tình cảm cho a </span><br>
     <span class="say">A sẽ luôn vì e mà sẽ không vô tâm với e nữa </span><br>
     <span class="say">Vì yêu em là niềm đam mê của anh.. moazzz😘 </span>
