--- a/kt/mylove/diary/10.html
+++ b/kt/mylove/diary/10.html
@@ -18,7 +18,7 @@
     <span class="say">..và với a, người iu e nhất 😘😘 </span><br>
     <span class="say">Vì a cũng biết e đã dành rất nhiều tình cảm cho a </span><br>
     <span class="say">A sẽ luôn vì e mà sẽ không vô tâm với e nữa </span><br>
-    <span class="say">☄️✨☘️ Chúc mừng sinh nhật e ☘️🌟💫 </span>
+    <span class="say">☄️✨☘️ Chúc mừng sinh nhật e ☘️🌟💫 </span><br>
     <span class="say"> </span><br>
     <span class="say">Chưa hết đâu còn nữa.. e nhấn về Trước đi </span><br>
 </p>
