--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -89,6 +89,7 @@
         var latest = 8;
         var today = new Date();
                    $('body').css("background-image","url('https://acoolzero.github.io/website/kt/mylove/image/birthday_background.jpeg')");
+        $('body').css("background-size","70%");
         if (today.getDate() === 25 & today.getMonth() === 8)
         {
             latest = 10;
