--- a/kt/mylove/diary/9.html
+++ b/kt/mylove/diary/9.html
@@ -1,4 +1,4 @@
-<p id="txtDiary" style="color: red; font-size: 14px;">
+<p id="txtDiary" style="color: rgb(238, 59, 96); font-size: 14px;">
     <span class="say">Ngoài ra.. </span><br>
     <span class="say">Anh sẽ làm cho mặt mọng đáng iu của e trở lại.. </span><br>
     <span class="say">Cả cái mũi đó nữa.. </span><br>
