--- a/kt/mylove/diary/9.html
+++ b/kt/mylove/diary/9.html
@@ -1,5 +1,6 @@
 <p id="txtDiary" style="color: rgb(238, 59, 96); font-size: 14px;">
     <span class="say">Ngoài ra.. </span><br>
+    <span class="say">Anh sẽ làm e cười lại.. </span><br>
     <span class="say">Anh sẽ làm cho mặt mọng đáng iu của e trở lại.. </span><br>
     <span class="say">Cả cái mũi đó nữa.. </span><br>
     <span class="say">Anh cũng đã hứa sẽ đền mũi cho e mà.. </span><br>
