--- a/kt/mylove/diary/11.html
+++ b/kt/mylove/diary/11.html
@@ -7,7 +7,7 @@
     <span class="say">Nhưng không vì thế mà a để thiên thần của a thiếu đi người bảo vệ </span><br>
     <span class="say">Và không trọn vẹn như bao cô gái khác </span><br>
     <span class="say"> </span><br>
-    <span class="say">Vậy nên </span><br>
+    <span class="say">Vậy nên, </span><br>
     <span class="say">Cứ tin vào giá trị của a e nhé </span><br>
     <span class="say">"Cuộc đời chúng ta sẽ vẫn có những ngày bình yên như thế, </span><br>
     <span class="say">Nửa đêm tỉnh dậy vẫn thấy người mình yêu choàng tay thật chặt ôm mình, </span><br>
