--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -54,11 +54,8 @@
     </div>
     <script>
         (function() {
-            //<img width="300px" style="float: left; position: absolute; bottom: 0px;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
-            //<img width="300px" style="float: right; position: absolute; bottom: 0px; right: 0px;" src='https://acoolzero.github.io/website/kt/mylove/image/birthday.png'/>
-        
             var iframe = document.createElement('iframe');
-            var url = "https://www.youtube.com/embed/?listType=playlist&list=PLsBwWQkOtT2LdZWoMmK3ygK_zp_EPEsyh&iv_load_policy=3&autoplay=1&loop=1&index="+Math.floor((Math.random() * 40) + 0);
+            var url = "https://www.youtube.com/embed/?listType=playlist&list=PLsBwWQkOtT2LdZWoMmK3ygK_zp_EPEsyh&iv_load_policy=3&autoplay=1&loop=1&index=18"; //"+Math.floor((Math.random() * 40) + 0);
             iframe.id = "ytplaylist";
             iframe.src = url;
             iframe.frameBorder = 0;
