--- a/kt/mylove/diary/11.html
+++ b/kt/mylove/diary/11.html
@@ -11,7 +11,7 @@
     <span class="say">Cứ tin vào giá trị của a e nhé </span><br>
     <span class="say">"Cuộc đời chúng ta sẽ vẫn có những ngày bình yên như thế, </span><br>
     <span class="say">Nửa đêm tỉnh dậy vẫn thấy người mình yêu choàng tay thật chặt ôm mình, </span><br>
-    <span class="say">Khẽ hôn lên vai họ để thấy thanh xuân của mình vẫn còn hiện hữu nơi đây. </span><br>
+    <span class="say">Khẽ hôn lên vai họ để thấy thanh xuân của mình vẫn còn hiện hữu nơi đây." </span><br>
     <span class="say"> </span><br>
     <span class="say"><span class="space"></span>-- Yêu em thật nhiều.. moazzz😘 </span>
 </p>
