--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -55,7 +55,7 @@
     <script>
         (function() {
             var iframe = document.createElement('iframe');
-            var url = "https://www.youtube.com/embed/?listType=playlist&list=PLsBwWQkOtT2LdZWoMmK3ygK_zp_EPEsyh&iv_load_policy=3&autoplay=1&loop=1&index=18"; //"+Math.floor((Math.random() * 40) + 0);
+            var url = "https://www.youtube.com/embed/?listType=playlist&list=PLsBwWQkOtT2LdZWoMmK3ygK_zp_EPEsyh&iv_load_policy=3&shuffle=1&autoplay=1&loop=1&index=18"; //"+Math.floor((Math.random() * 40) + 0);
             iframe.id = "ytplaylist";
             iframe.src = url;
             iframe.frameBorder = 0;
