--- a/about_me.html
+++ b/about_me.html
@@ -40,7 +40,7 @@
      <div class="container">
       <section id="main_content">
       <h3>Nguyen Phi Cuong</h3>
-      <p>./I'm a legend !!</p>
+      <p>./I am a legend !!</p>
       </section>
 </div>
  
